--- a/Lab2/Laboratorium 2.ipynb
+++ b/Lab2/Laboratorium 2.ipynb
@@ -555,32 +555,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix_determinant (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "function _matrix_determinant(A, n)\n",
-    "    \n",
-    "end\n",
-    "\n",
     "function matrix_determinant(A)\n",
     "    \"\"\"\n",
     "    :return determinant of matrix\n",
     "    A must be in shape (2^i, 2^i) where i is Natural\n",
     "    \"\"\"\n",
     "    \n",
-    "    n = size(A, 1)\n",
-    "    m = size(A, 2)\n",
-    "    \n",
-    "    if n != m \n",
-    "        throw(NonSquareMatrixError(\"Matrix is not the square\"))\n",
-    "    end\n",
-    "    log2_n = log2(n)\n",
-    "    if !(trunc(Int, log2_n) - log2_n ≈ 0)\n",
-    "        throw(ArgumentError(\"A, not in (2^i, 2^i) shape, shape= $(size(A))\"))\n",
-    "    end\n",
+    "    L, U = matrix_LU_factor(A)\n",
     "\n",
-    "    return _matrix_LU_factor(A, n)\n",
+    "    diagonal = [L[i,i] for i in 1:size(A, 1)]\n",
+    "    return prod(diagonal)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FALSE!!! my_det:4.512381852486594e8, det(A):4.5123818525026506e8 \n",
+      "64\n",
+      "FALSE!!! my_det:-4.548303993849702e38, det(A):-4.5483039679726056e38 \n",
+      "128\n",
+      "FALSE!!! my_det:-1.041955282959762e116, det(A):-1.0419552828891237e116 \n",
+      "256\n",
+      "FALSE!!! my_det:-7.321199048444222e9, det(A):-7.32119904844586e9 \n",
+      "64\n",
+      "FALSE!!! my_det:-8.94303423699728e38, det(A):-8.943034237706371e38 \n",
+      "128\n",
+      "FALSE!!! my_det:-2.1453003108246745e116, det(A):-2.145300301914047e116 \n",
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To check corectness\n",
+    "# This implementation may be unstable\n",
+    "eps = 10 ^ -5\n",
+    "min_value = 0.00000001\n",
+    "max_value = 1\n",
+    "for j in 1:2\n",
+    "    for i in 1:8\n",
+    "        A = min_value .+ (max_value - min_value) * rand(2 ^ i, 2 ^ i)\n",
+    "        \n",
+    "        my_det_a = matrix_determinant(A)\n",
+    "        det_a = det(A)\n",
+    "    \n",
+    "        if isapprox(my_det_a, det_a, atol=eps) == false\n",
+    "            println(\"FALSE!!! my_det:$my_det_a, det(A):$det_a \\n\", size(A, 1))\n",
+    "            \n",
+    "        end\n",
+    "    end\n",
     "end"
    ]
   }
