Lab4 - Cuthill-McKee

--- a/Lab4/Laboratorium 4.ipynb
+++ b/Lab4/Laboratorium 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "61c42450",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "84bc4416",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "65ad55f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minimum_degree(matrix):\n",
-    "    # Create graph\n",
+    "def graph(matrix):\n",
     "    n = len(matrix)\n",
     "    V = {}\n",
     "    for i in range(n):\n",
@@ -65,6 +64,12 @@
     "        for j in range(n):\n",
     "            if matrix[i, j] != 0:\n",
     "                V[i].add(j)\n",
+    "    return V\n",
+    "\n",
+    "def minimum_degree(matrix):\n",
+    "    # Create graph\n",
+    "    n = len(matrix)\n",
+    "    V = graph(matrix)\n",
     "    \n",
     "    pq = [(len(edge), v) for v, edge in V.items()]\n",
     "    heapify(pq)\n",
@@ -89,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "1c756603",
    "metadata": {},
    "outputs": [
@@ -112,8 +117,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3c6db1d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cuthill_mckee(matrix):\n",
+    "    n = len(matrix)\n",
+    "    V = graph(matrix) # No need to sort because I use heapque\n",
+    "    \n",
+    "    \n",
+    "    all_vertex = [(-len(edge), v) for v, edge in V.items()] # reverse heap\n",
+    "    heapify(all_vertex)\n",
+    "    \n",
+    "    bfs_pq = [all_vertex[0]]\n",
+    "    visited = [False for i in range(n)]\n",
+    "    \n",
+    "    permutation = []\n",
+    "    while bfs_pq:\n",
+    "        \n",
+    "        # If graph is no consistent - bfs_pq empty but not all vertex visited\n",
+    "        while not bfs_pq and all_vertex:\n",
+    "            _, u = heappop(all_vertex)\n",
+    "            if not visited[u]: heappush(bfs_pq, (-len(V[u]), u))\n",
+    "            \n",
+    "        \n",
+    "        _, v = heappop(bfs_pq)\n",
+    "        \n",
+    "        if visited[v]:\n",
+    "            continue\n",
+    "        \n",
+    "        visited[v] = True\n",
+    "        permutation.append(v)\n",
+    "        \n",
+    "        for edge in V[v]:\n",
+    "            if not visited[edge]:\n",
+    "                heappush(bfs_pq, (-len(V[edge]), edge))\n",
+    "    \n",
+    "    return permutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bb772ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 0, 1, 2, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Z wykladu\n",
+    "test2 = np.array([[1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "                 [1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "                  [1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "                  [1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
+    "                  [0, 0, 0, 1, 1, 1, 0, 0, 0],\n",
+    "                  [0, 0, 0, 0,1, 1, 1, 1, 1],\n",
+    "                  [0, 0, 0, 0, 0, 1, 1, 1, 1],\n",
+    "                  [0, 0, 0, 0, 0, 1, 1, 1, 1],\n",
+    "                  [0, 0, 0, 0, 0, 1, 1, 1, 1]])\n",
+    "\n",
+    "cuthill_mckee(test2) # Działa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cfe0bd04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reversed_cuthill_mckee(matrix):\n",
+    "    return list(reversed(cuthill_mckee(matrix)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d5591b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def permutate(matrix, p_table):\n",
+    "    return matrix[p_table, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "741066bd",
    "metadata": {},
    "outputs": [],
    "source": []
