1st ver of report

--- a/Lab4/Laboratorium 4.ipynb
+++ b/Lab4/Laboratorium 4.ipynb
@@ -319,7 +319,8 @@
    "id": "3950ab21",
    "metadata": {},
    "source": [
-    "## Raport 2"
+    "## Raport\n",
+    "2 podpunkt"
    ]
   },
   {
@@ -329,7 +330,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "k = 2\n",
