Fixed Lab4 - Permutation Algorithms and Plotter

--- a/Lab3/Laboratorium 3 - Python.ipynb
+++ b/Lab3/Laboratorium 3 - Python.ipynb
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5acef142",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_tree(matrix, r, epsilon):\n",
     "    U, s, V = randomized_svd(matrix, n_components=r)\n",
-    "    r = s.size\n",
+    "    rank = s.size\n",
     "    node = None\n",
     "    if s[-1] < epsilon:\n",
-    "        node = compress_matrix(matrix, U, s, V, r)\n",
+    "        node = compress_matrix(matrix, U, s, V, rank)\n",
     "    \n",
     "    else:\n",
     "        Y, X = matrix.shape\n",
@@ -793,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
